
- Added IPv6 address parsing/formatting and network functions.

- Added a library of number formatting routines.

- Modifed str_subst to return a count of substitutions.

- Added str_xlate function.

- Added socket connect functions with a timeout.

- Added ibuf_readall, ibuf_openreadclose, ibuf_copytofd, and
  obuf_copyfromfd.

NOTE: The next non-bugfix version of bglibs will be rewritten to use the
new formatting routines in the appropriate iobuf and str functions.
This will require linking against additional libraries in the future.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.011

- Fixed up the selftests in unix/selfpipe.c to work if additional file
  descriptors are already opened.

- Fixed missing "ULL" on one constant in the SHA-512 library.

- Fixed up crc64 table generation on 64-bit platforms.

- Fixed ipv4 address parsing number validation.

- Fixed crc table generation on Solaris caused by missing
  #include <stdlib.h>

- Internal changes to installer scripts to make it work on systems where
  the root directory is non-readable.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.010

- Added a getpeereid sysdep function.

- Added self-pipe SIGCHLD handling functions.

- Added some small optimizations to the SHA-256/512 code and fixed a
  one-off bug.

- Added some major optimizations to the SHA-1 update/final code.

- Removed the cvm libraries.

- All the CRC tables are now generated at build time.

- Split the case insensitive parts of the str_glob and str_match
  functions into str_case_glob and str_case_match respectively.

- wrap_* functions can now exit with a customized error code.
