@@ -18,7 +18,8 @@
 #define RESOLVE_TEMPFAIL 4
 
 extern const char* resolve_ipv4addr(const ipv4addr* addr);
-extern int resolve_ipv4name(const char* name, ipv4addr* addr);
+extern int resolve_ipv4name_n(const char* name, ipv4addr* addr, int maxaddrs);
+#define resolve_ipv4name(N,A) resolve_ipv4name_n((N),(A),1)
 extern int resolve_error(void);
 
 /* @} */
