@@ -16,6 +16,8 @@ Changes in version 1.015
 - Added ibuf_readall, ibuf_openreadclose, ibuf_copytofd, and
   obuf_copyfromfd.
 
+- Added resolve_ipv4name_n, to resolve a name to more than one IP.
+
 NOTE: The next non-bugfix version of bglibs will be rewritten to use the
 new formatting routines in the appropriate iobuf and str functions.
 This will require linking against additional libraries in the future.
